--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-qrcode-logo": "^2.8.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
